[B]1.0.1[/B]
- Előtöltés, felesleges részek kiszedése by vargalex
[B]1.0.0[/B]
- Első verzió