@@ -3,6 +3,8 @@
 
 Kodi kiegészítő a filmezek.com-hoz
 
+1.0.2 - m3u8 linkek lejátszása inputstream adaptive használatával by vargalex
+
 1.0.1 - Előtöltés, felesleges részek kiszedése by vargalex
 
 1.0.0 - Első verzió
