@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.filmezek" name="Filmezek" version="1.0.1" provider-name="heg, vargalex">
+<addon id="plugin.video.filmezek" name="Filmezek" version="1.0.22" provider-name="heg, vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
 		<import addon="script.module.resolveurl" version="5.1.00"/>
 		<import addon="xbmc.python" version="3.0.0"/>
+		<import addon="script.module.inputstreamhelper" version="0.4.3"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
@@ -14,7 +15,8 @@
 		<description lang="en">Nézd meg a filmeket, sorozatokat a https://filmezek.com oldalról!</description>
 		<language>hu</language>
 		<platform>all</platform>
-		<news> 		
+		<news> 
+			1.0.2 - m3u8 linkek lejátszása inputstream adaptive használatával
 			1.0.1 - Előtöltés, felesleges részek kiszedése by vargalex
 			1.0.0 - Első verzió
 		</news>
